# SJSL

./: .gitignore  CMakeLists.txt  README.md
SJSL/: CMakeLists.txt  Job.cpp  Job.h  JobSystem.cpp  JobSystem.h  QuickLogger.cpp  QuickLogger.h  WorkerThread.cpp  WorkerThread.h
UnitTests/: CMakeLists.txt  UnitTests.cpp  unittest_JobSystem.cpp  unittest_WorkerThread.cpp
